# pinokio

./: .eslintrc.json  .gitignore  ARQUIVOS_CRIADOS.txt  BACKEND_STRUCTURE.md  FASE_2_REPORT.md  FASE_2_VALIDACAO_FINAL.md  QUICKSTART.md  README.md  TESTING.md  ci_log_run7.txt  config.js  full.js  main.mock.js  minimal.js  package.json  permissions.js  playwright.config.js  preload.js  prompt.html  setup.py  setup.sh  splash.html  start.bat  start.js  start.sh  webprefs.js
.github/workflows/: build.yml  build.yml.disabled  release.yml  tauri-build.yml  test.yml
assets/: ai-sidebar.css  skeleton.css
backend/lib/: browser-logging.js  ipc-handlers.js  security.js  splash.js  tauri-bridge.js  utils.js
backend/scripts/: sync-vendor.js
backend/tauri/: Cargo.toml  (+2 more)
docs/: BUG_INSTALL_NAME.md  CHECKLIST_VALIDACAO_FINAL.md  FASE_2_SUMMARY.txt  PATCH_INSTALL_NAME.js  QUICKSTART.md  README_TEMPLATES.md  SECURITY.md  START_HERE.md  Testes e Qualidade.md  app.html.template  check_gpu.json.template  check_python.json.template  diagnostics.json.template  install.json.template  pinokio.js.template  reset.json.template  start.json.template  stop.json.template  update.json.template
lib/: index.js  inspector.js  logger.js
pinokio_vendor/: README.md
script/: heartbeat.js
scripts/: check-no-generated-files.sh  cleanup.sh  sync-vendor.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: filesystem.rs  process_manager.rs  terminal.rs
tauri/: tauri.conf.json
temp/: yarn.js
tests/: playwright.config.js  smoke.sh
ui/: prompt.html
(+74 files in other folders)
